--- a/team.html
+++ b/team.html
@@ -209,7 +209,7 @@
                         </a>                        
                     </p>
                 </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Lebenslauf_Gianni_Moretti Kopie.jpg">
+                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Neue Fotos/Lebenslauf_Gianni_Moretti Kopie.jpg">
             </div>                        
     </div>
     <div class="row">           
