--- a/team.html
+++ b/team.html
@@ -249,7 +249,7 @@
             </div>
         </div>
     </div> 
-    <div class="row"></div>
+    <div class="row">
         <div class="col-sm-6 col-xs-12">
             <div class="portrait-well">
                 <div class="col-md-5 col-xs-12">
