--- a/team.html
+++ b/team.html
@@ -145,7 +145,7 @@
         <div class="col-sm-6 col-xs-12">
             <div class="portrait-well">
                 <div class="col-md-5 col-xs-12">                
-                    <h1>Ursula Hövelmann</h1>
+                    <h1>Ursula&nbsp; Hövelmann</h1>
                     <p>
                         Physiotherapeutin&nbsp;Master of Profession
                         <br/>
@@ -236,7 +236,7 @@
                 <div class="col-md-5 col-xs-12">
                     <h1>Kathrin&nbsp;Caminada</h1>
                     <p>
-                        Seit 2019 BSc in Sport, Bewegung und Gesundheit&nbsp;i.A.&nbsp;
+                        Seit 2019 BSc in Sport, Bewegung und &nbsp Gesundheit&nbsp;i.A.&nbsp;
                         <br/>
                         <a href="mailto:info@physiomovimento.ch">E-Mail</a>
                         <br/<>
@@ -288,12 +288,13 @@
                         Raumpflegerin
                         <br/>                                            
                         <a href="mailto:info@physiomovimento.ch">E-Mail</a>
+                        <br/<>
                     </p>
                 </div>
                 <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Neue Fotos/Shevin.jpg">      
             </div>
         </div>      
-
+    </div>    
     <!--
     <div class="row">                     
     </div>    
