--- a/team.html
+++ b/team.html
@@ -145,7 +145,7 @@
         <div class="col-sm-6 col-xs-12">
             <div class="portrait-well">
                 <div class="col-md-5 col-xs-12">                
-                    <h1>Ursula&nbsp; Hövelmann</h1>
+                    <h1>Ursula&nbsp;Hövelmann</h1>
                     <p>
                         Physiotherapeutin&nbsp;Master of Profession
                         <br/>
@@ -279,7 +279,7 @@
             </div> 
         </div> 
     </div> 
-    <div class="row"></div>        
+    <div class="row">        
         <div class="col-sm-6 col-xs-12">
             <div class="portrait-well">
                 <div class="col-md-5 col-xs-12">
