--- a/Kathrin.html
+++ b/Kathrin.html
@@ -121,12 +121,12 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-lg-2 col-xs-3">Seit 2017</div>
-        <div class="col-xs-9">Seit 2020 Betreuerin Fitness Movimento Physio-und Trainingstherapie GmbH Oberdorf</div>
+        <div class="col-lg-2 col-xs-3">Seit 2020</div>
+        <div class="col-xs-9">Betreuerin Fitness Movimento Physio-und Trainingstherapie GmbH Oberdorf</div>
     </div>
     <div class="row">
         <div class="col-lg-2 col-xs-3">Seit 2020</div>
-        <div class="col-xs-9">Schwimmlehrerin Schwimmschule Delfin Birsfeldem</div>
+        <div class="col-xs-9">Schwimmlehrerin Schwimmschule Delfin Birsfelden</div>
     </div>
    
 
