--- a/team.html
+++ b/team.html
@@ -236,7 +236,7 @@
                 <div class="col-md-5 col-xs-12">
                     <h1>Kathrin&nbsp;Caminada</h1>
                     <p>
-                        Seit&nbsp;2019&nbsp;BSc&nbsp;in&nbsp;Sport, Bewegung&nbsp;und&nbsp;Gesundheit&nbsp;i.A.
+                        Sporttherapeutin i.A.
                         <br/>
                         <a href="mailto:info@physiomovimento.ch">E-Mail</a>
                         <br/<>
