--- a/team.html
+++ b/team.html
@@ -236,7 +236,7 @@
                 <div class="col-md-5 col-xs-12">
                     <h1>Kathrin&nbsp;Caminada</h1>
                     <p>
-                        Sporttherapeutin i.A.
+                        Sporttherapeutin&nbsp;i.A.
                         <br/>
                         <a href="mailto:info@physiomovimento.ch">E-Mail</a>
                         <br/<>
