--- a/team.html
+++ b/team.html
@@ -200,7 +200,7 @@
                 <div class="col-md-5 col-xs-12">
                     <h1>Gianni&nbsp;Moretti</h1>
                     <p>
-                        Trainer, Sportwissenschaftler&nbsp;i.A.&nbsp;
+                        Trainer,&nbsp;Sportwissenschaftler&nbsp;i.A.&nbsp;
                         <br/>
                         <a href="mailto:info@physiomovimento.ch">E-Mail</a>
                         <br/<>
@@ -219,7 +219,7 @@
                 <div class="col-md-5 col-xs-12">
                     <h1>Daniel&nbsp;Seiler</h1>
                     <p>
-                        Fitness Betreuer/Trainer&nbsp;safs
+                        Fitness&nbsp;Betreuer/Trainer&nbsp;safs
                         <br/>
                         <a href="mailto:info@physiomovimento.ch">E-Mail</a>
                         <br/<>
