--- a/Kathrin.html
+++ b/Kathrin.html
@@ -137,7 +137,7 @@
     </div>
     <div class="row">
         <ul>
-            <li>Seit 2019 BSc in Sport, Bewegung und Gesundheit&nbsp;i.A.&nbsp;</li>
+            <li>2019 Beginn Bachelor of Science in Sport, Bewegung und Gesundheit Universität Basel</li>
         </ul>
     </div>
     <div class="row">
