--- a/reto-maurer.html
+++ b/reto-maurer.html
@@ -129,15 +129,10 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-lg-2 col-xs-3">Seit 2015</div>
+        <div class="col-lg-2 col-xs-3">2013-2018</div>
+        
         <div class="col-xs-9">
-            Dozent Ausbildung FitnessinstruktorIn, Klubschule Migros Basel
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-lg-2 col-xs-3">Seit 2013</div>
-        <div class="col-xs-9">
-            Prüfungsexperte Ausbildung FitnessinstruktorIn, Klubschule Migros Basel
+            Dozent und Prüfungsexperte  Ausbildung FitnessinstruktorIn, Klubschule Migros Basel
         </div>
     </div>
     <div class="row">
@@ -150,6 +145,12 @@
         <div class="col-lg-2 col-xs-3">2011-2014</div>
         <div class="col-xs-9">
             Fitnessinstruktor/Sportlehrer, Sana Center SA Biel/Hirslanden Training Aarau
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-2 col-xs-3">Seit 2019</div>
+        <div class="col-xs-9">
+            Bewegungscoach Universität Basel
         </div>
     </div>
     <div class="row">
