--- a/ursula-hoevelmann.html
+++ b/ursula-hoevelmann.html
@@ -163,6 +163,7 @@
             <li>Gerätegestützte Krankengymnastik (KGG)</li>
             <li>Lympdrainage und Ödemtherapie</li>
             <li>Bachelor of Health in Physiotherapie Hogeschool van Utrecht, Holland 2004</li>
+            <li>2020 Spiraldynamik Basic</li>
         </ul>
     </div>
     <div class="row">
