--- a/ursula-hoevelmann.html
+++ b/ursula-hoevelmann.html
@@ -153,6 +153,7 @@
     </div>
     <div class="row">
         <ul>
+            <li>Spiraldynamik Basic</li>
             <li>2017 Beginn Heilpraktiker-Ausbildung (Erlernen der Naturheilkunde)</li>
             <li>diverse Lehrgänge Chiropraktik</li>
             <li>Basiskurs Golf-Physiotherapie</li>
@@ -163,7 +164,7 @@
             <li>Gerätegestützte Krankengymnastik (KGG)</li>
             <li>Lympdrainage und Ödemtherapie</li>
             <li>Bachelor of Health in Physiotherapie Hogeschool van Utrecht, Holland 2004</li>
-            <li>2020 Spiraldynamik Basic</li>
+            
         </ul>
     </div>
     <div class="row">
