--- a/team.html
+++ b/team.html
@@ -261,7 +261,7 @@
                         <br/<>
                     </p>
                 </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Neue Fotos/Igballe.jpg">
+                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Igballeneu.jpg">
             </div>
         </div>                  
         <div class="col-sm-6 col-xs-12">
