--- a/index.html
+++ b/index.html
@@ -270,12 +270,12 @@
         <div class="col-sm-6">
             <div class="new well">
                 <h1>Aktuell</h1>
-                <b> NEU!</b><br/> 
+                <b> Wegen Bauarbeiten geschlossen:<br/> Mo.,26.10.20 ab 16h30</b><br/> 
+                <b> Di.,27.10.20 ab 15h30</b><br/> 
                 <a href="docs/Flyer.pdf" target="_blank"><b> Outdoor Training</b></a><br/> 
                 <b>Fitness:</b><br/> 
-                Aktuelles Schutzkonzept ab 29.06.20<br/> 
-                <p>Weitere Infos<a href="docs/Schutzkonzept ab 29.06.2020 - Movimento Fitness.pdf" target="_blank"><b> hier</b></a>
-                <p>Bleiben Sie gesund!</p>           
+                Aktuelles Schutzkonzept:<br/> 
+                <p>Weitere Infos<a href="docs/Schutzkonzept ab 9.10.2020 - Movimento Fitness.pdf" target="_blank"><b> hier</b></a>           
             </div>
         </div>
         <div class="col-sm-6 hidden">
