--- a/team.html
+++ b/team.html
@@ -181,18 +181,18 @@
         <div class="col-sm-6 col-xs-12">
             <div class="portrait-well">
                 <div class="col-md-5 col-xs-12">
-                    <h1>Reto&nbsp;Maurer</h1>
+                    <h1>Carina&nbsp;Lang</h1>
                     <p>
-                        Sportwissenschaftler&nbsp;EHSM
+                        Sporttherapeutin&nbsp;BSc
                         <br/>
-                        <a href="mailto:reto.maurer@physiomovimento.ch">E-Mail</a>
+                        <a href="mailto:info@physiomovimento.ch">E-Mail</a>
                         <br/>                
-                        <a href="reto-maurer.html" role="button">
+                        <a href="carina-lang.html" role="button">
                             Mehr&hellip; 
                         </a>
                     </p>
                 </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Neue Fotos/Reto.jpg">
+                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Blank_woman_placeholder.svg">
             </div>  
         </div>       
         <div class="col-sm-6 col-xs-12">
