--- a/Vera-schmidt.html
+++ b/Vera-schmidt.html
@@ -140,6 +140,7 @@
     </div>
     <div class="row">
         <ul>
+            <li>2020 Beginn Zusatzausbildung in Manueller Therapie Maitland Konzept</li>
             <li>2019 Motivational Interviewing ZHAW</li>
             <li>Bachelor of Science in Physiotherapie BFH 2018</li>
              
