--- a/carina-lang.html
+++ b/carina-lang.html
@@ -125,7 +125,7 @@
     <div class="row">
         <div class="col-lg-2 col-xs-3">Seit 2020</div>
         <div class="col-xs-9">
-            Sporttherapuetin Movimento Physio- und Trainingstherapie GmbH Oberdorf
+            Sporttherapeutin Movimento Physio- und Trainingstherapie GmbH Oberdorf
         </div>
     </div>
     <div class="row">
@@ -174,7 +174,7 @@
     <div class="row">
         <ul>
             <li>Bachelor of Science in Sport, Bewegung und Gesundheit Universität Basel 2020</li>
-            <li>-J&S Ski, Ski Methodik, Volleyball Schwedisch A2</li>
+            <li>J&S Ski, Ski Methodik, Volleyball Schwedisch A2</li>
            
         </ul>
     </div>
