--- a/team.html
+++ b/team.html
@@ -192,7 +192,7 @@
                         </a>
                     </p>
                 </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Neue Fotos/Carina.jpg">
+                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Neue Fotos/Carina2.jpg">
             </div>  
         </div>       
         <div class="col-sm-6 col-xs-12">
