--- a/index.html
+++ b/index.html
@@ -270,6 +270,7 @@
         <div class="col-sm-6">
             <div class="new well">
                 <h1>Aktuell</h1>
+                <b></b>NEU gilt für alle:<br/>Maskenpflicht im Eingangs-umd Wartebereich</b><br/> 
                 <b> Wegen Bauarbeiten geschlossen:<br/> Mo.,26.10.20 ab 16h30</b><br/> 
                 <b> Di.,27.10.20 ab 15h30</b><br/> 
                 <br/>
