--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                 <a href="docs/Flyer.pdf" target="_blank"><b> Info Outdoor Training</b></a><br/> 
                 <br/>
                 <b>Schutzkonzept Fitness:</b><br/>  
-                <p>Weitere Infos<a href="docs/Schutzkonzept ab 9.10.2020 - Movimento Fitness.pdf" target="_blank"><b> hier</b></a>           
+                <p>Weitere Infos<a href="docs/Schutzkonzept ab 19.10.2020 Zusatz Plakat Maskenpflicht- Movimento Fitness.pdf" target="_blank"><b> hier</b></a>           
             </div>
         </div>
         <div class="col-sm-6 hidden">
