--- a/index.html
+++ b/index.html
@@ -270,10 +270,8 @@
         <div class="col-sm-6">
             <div class="new well">
                 <h1>Aktuell</h1>
-                <b></b><font color="#ec580f">NEU gilt für alle:</font><br/>Maskenpflicht im Eingangs-und Wartebereich</b><br/> 
+                <b></b><font color="#ec580f">Maskenpflicht</font>im ganzen Movimento, auch während dem Training*</b><br/> 
                 <br/> 
-                <b> Wegen Bauarbeiten geschlossen:<br/> Mo.,26.10.20 ab 16h30</b><br/> 
-                <b> Di.,27.10.20 ab 15h30</b><br/> 
                 <br/>
                 <a href="docs/Flyer.pdf" target="_blank"><b> Info Outdoor Training</b></a><br/> 
                 <br/>
