--- a/index.html
+++ b/index.html
@@ -272,11 +272,10 @@
                 <h1>Aktuell</h1>
                 <b></b><font color="#ec580f">Maskenpflicht</font> im ganzen Movimento, auch während dem Training!</b><br/> 
                 <br/> 
-                <br/>
                 <a href="docs/Flyer.pdf" target="_blank"><b> Info Outdoor Training</b></a><br/> 
                 <br/>
                 <b>Schutzkonzept Fitness:</b><br/>  
-                <p>Weitere Infos<a href="docs/Schutzkonzept ab 19.10.2020 Zusatz Plakat Maskenpflicht- Movimento Fitness.pdf" target="_blank"><b> hier</b></a>           
+                <p>Weitere Infos<a href="docs/Schutzkonzept ab 29.10.2020 - Movimento Fitness.pdf" target="_blank"><b> hier</b></a>           
             </div>
         </div>
         <div class="col-sm-6 hidden">
@@ -375,7 +374,7 @@
                     <td nowrap='true'>Di:</td>
                     <td>08:00 – 21:00</td>
                     <td>&nbsp;</td>
-                    <td>10:00 - 12:00</td>
+                    <td>09:00 - 11:00</td>
                 </tr>
                 <tr>
                     <td nowrap='true'>Mi:</td>
@@ -387,7 +386,7 @@
                     <td nowrap='true'>Do:</td>
                     <td>08:00 – 21:00</td>
                     <td>&nbsp;</td>
-                    <td>10:00 - 12:00</td>
+                    <td>09:00 - 11:00</td>
                 </tr>
                 <tr>
                     <td nowrap='true'>Fr:</td>
