--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                 <h1>Aktuell</h1>
                 <b></b><font color="#ec580f">Maskenpflicht</font> im ganzen Movimento, auch während dem Training!</b><br/> 
                 <br/> 
-                <a href="docs/Flyer.pdf" target="_blank"><b> Info Outdoor Training</b></a><br/> 
+                <a href="docs/Flyer Nordic Walking.pdf" target="_blank"><b> Info Outdoor Training</b></a><br/> 
                 <br/>
                 <b>Schutzkonzept Fitness:</b><br/>  
                 <p>Weitere Infos<a href="docs/Schutzkonzept ab 29.10.2020 - Movimento Fitness.pdf" target="_blank"><b> hier</b></a>           
