--- a/carina-lang.html
+++ b/carina-lang.html
@@ -183,7 +183,7 @@
                 Ueli Schadweg 3<br/>
                 4436 Oberdorf/BL<br/>
                 061 963 00 23<br/>
-                <a href="mailto:info@physiomovimento.ch">info@physiomovimento.ch</a>
+                <a href="mailto:carina.lang@physiomovimento.ch">info@physiomovimento.ch</a>
             </p>
             <h2>Öffnungszeiten</h2>
             <p>Bitte beachten Sie die <a href="index.html#NeueOeffnungszeiten">aktuellen Öffnungszeiten.</a></p>  
