--- a/team.html
+++ b/team.html
@@ -185,7 +185,7 @@
                     <p>
                         Sporttherapeutin&nbsp;BSc
                         <br/>
-                        <a href="mailto:info@physiomovimento.ch">E-Mail</a>
+                        <a href="mailto:carina.lang@physiomovimento.ch">E-Mail</a>
                         <br/>                
                         <a href="carina-lang.html" role="button">
                             Mehr&hellip; 
