--- a/carina-lang.html
+++ b/carina-lang.html
@@ -113,7 +113,7 @@
             <h2>Carina&nbsp;Lang</h2>
             <p>
                 Sporttherapeutin&nbsp;BSc<br/>
-                <a href="mailto:carina.lan@physiomovimento.ch">E-Mail</a>
+                <a href="mailto:carina.lang@physiomovimento.ch">E-Mail</a>
             </p>
         </div>
     </div>
