--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
             <div class="new well">
                 <h1>Aktuell</h1>
                 <b></b><font color="#ec580f">Maskenpflicht</font> im ganzen Movimento, auch während dem Training!</b><br/> 
-                <br/> 
+                <br/> Training nur nach Terminvereinbarung:<a href="docs/Reservationssystem Doodle.pdf" target="_blank"><b></b> Link zum Doodle</b></a> 
                 <a href="docs/Flyer Nordic Walking.pdf" target="_blank"><b> Info Outdoor Training</b></a><br/> 
                 <br/>
                 <b>Schutzkonzept Fitness:</b><br/>  
