--- a/team.html
+++ b/team.html
@@ -176,7 +176,8 @@
                 <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Neue Fotos/Vera.jpg">i
             </div>
         </div>
-        <div class="col-sm-6 col-xs-12">
+    </div>
+    <div class="col-sm-6 col-xs-12">
             <div class="portrait-well">
                 <div class="col-md-5 col-xs-12">
                     <h1>Viktor&nbsp;Bossert</h1>
@@ -190,7 +191,7 @@
                         </a>                        
                     </p>
                 </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="mg/Neue Fotos/Viktor.jpg">
+                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Neue Fotos/Viktor.jpg">
             </div>
         </div>
     </div>
