--- a/team.html
+++ b/team.html
@@ -177,7 +177,8 @@
             </div>
         </div>
     </div>
-    <div class="col-sm-6 col-xs-12">
+    <div class="row"></div>
+        <div class="col-sm-6 col-xs-12">
             <div class="portrait-well">
                 <div class="col-md-5 col-xs-12">
                     <h1>Viktor&nbsp;Bossert</h1>
@@ -194,8 +195,6 @@
                 <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Neue Fotos/Viktor.jpg">
             </div>
         </div>
-    </div>
-    <div class="row">
         <div class="col-sm-6 col-xs-12">
             <div class="portrait-well">
                 <div class="col-md-5 col-xs-12">
@@ -212,6 +211,25 @@
                 </div>
                 <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Neue Fotos/Carina2.jpg">
             </div>  
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-6 col-xs-12">
+            <div class="portrait-well">
+                <div class="col-md-5 col-xs-12">
+                    <h1>Kathrin&nbsp;Caminada</h1>
+                    <p>
+                        Sporttherapeutin&nbsp;i.A.
+                        <br/>
+                        <a href="mailto:info@physiomovimento.ch">E-Mail</a>
+                        <br/<>
+                        <a href="Kathrin.html" role="button">
+                                Mehr&hellip;
+                        </a>                        
+                    </p>
+                </div>
+                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Neue Fotos/Kahrin.jpg">
+            </div>
         </div>       
         <div class="col-sm-6 col-xs-12">
             <div class="portrait-well">
@@ -252,20 +270,18 @@
         <div class="col-sm-6 col-xs-12">
             <div class="portrait-well">
                 <div class="col-md-5 col-xs-12">
-                    <h1>Kathrin&nbsp;Caminada</h1>
+                    <h1>Shevin&nbsp;Al&nbsp;Isa</h1>
                     <p>
-                        Sporttherapeutin&nbsp;i.A.
-                        <br/>
+                        Raumpflegerin
+                        <br/>                                            
                         <a href="mailto:info@physiomovimento.ch">E-Mail</a>
                         <br/<>
-                        <a href="Kathrin.html" role="button">
-                                Mehr&hellip;
-                        </a>                        
                     </p>
                 </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Neue Fotos/Kahrin.jpg">
+                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Neue Fotos/Shevin.jpg">      
             </div>
-        </div>
+        </div>      
+    </div
     </div> 
     <div class="row">
         <div class="col-sm-6 col-xs-12">
@@ -297,22 +313,8 @@
             </div> 
         </div> 
     </div> 
-    <div class="row">        
-        <div class="col-sm-6 col-xs-12">
-            <div class="portrait-well">
-                <div class="col-md-5 col-xs-12">
-                    <h1>Shevin&nbsp;Al&nbsp;Isa</h1>
-                    <p>
-                        Raumpflegerin
-                        <br/>                                            
-                        <a href="mailto:info@physiomovimento.ch">E-Mail</a>
-                        <br/<>
-                    </p>
-                </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Neue Fotos/Shevin.jpg">      
-            </div>
-        </div>      
-    </div>    
+            
+       >    
     <!--
     <div class="row">                     
     </div>    
