--- a/team.html
+++ b/team.html
@@ -173,7 +173,7 @@
                         </a>                        
                     </p>
                 </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Neue Fotos/Vera.jpg">i
+                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Neue Fotos/Vera.jpg">
             </div>
         </div>
     </div>
