--- a/team.html
+++ b/team.html
@@ -147,7 +147,7 @@
                 <div class="col-md-5 col-xs-12">                
                     <h1>Tobias&nbsp;Elmiger</h1>
                     <p>
-                        Dipl. Physiotherapeut
+                        Dipl.&nbsp;Physiotherapeut
                         <br/>
                         <a href="mailto:info@physiomovimento.ch">E-Mail</a>
                         <br/>
