--- a/Tobias Elmiger.html
+++ b/Tobias Elmiger.html
@@ -189,7 +189,7 @@
             <li>Motorische Kontrolle-motorisches Lernen</li>
             <li>Einführungskurs Neuro Development Treatment</li>
             <li>Zusatzausbildung in Manueller Therapie Maitland Konzept Level I</li>
-            <li>Diplom Physiotherapie Bethesda-Spital Basel Dez. 1995 </li>
+            <li>Diplom Physiotherapie Bethesda-Spital Basel Dezember 1995 </li>
             
         </ul>
     </div>
