--- a/physio.html
+++ b/physio.html
@@ -91,7 +91,7 @@
                 <li>Leistungsdiagnostik auf Anfrage</li>
                 <li>Konservative und postoperative Rehabilitation</li>
                 <li>Lymphdrainage</li>
-                <li>Manuelle Triggerpunkttherapie</li>
+                <li>Manuelle Triggerpunkttherapie/ Dry Needling</li>
                 <li>Kinesiotaping</li>
                 <li>Medizinische Massage</li>
                 <li>Physikalische Anwendungen (Elektrotherapie, Ultraschall, Wärmeanwendungen)</li>
