--- a/index.html
+++ b/index.html
@@ -273,13 +273,13 @@
                 <b>Neue Verordnung des Kantons BL</b><br/> 
                 <b>Fittness geschlossen ab 11.12.20 bis voraussichtlich 18.01.21</b><br/>
                 <b>(Ausnahme: Training auf ärztliche Verordnung)</b><br/>
-                <b></b><font color="#ec580f">Maskenpflicht</font> im ganzen Movimento!</b><br/> 
+                <b><font color="#ec580f">Maskenpflicht</font> im ganzen Movimento!</b><br/> 
                 <p class="hidden"><br/> Training nur nach Terminvereinbarung:<a href="docs/Reservationssystem Doodle.pdf" target="_blank"><b></b> Link zum Doodle</b></a><br/>
                 <br/>
                 <a href="docs/Flyer Nordic Walking.pdf" target="_blank"><b> Info Outdoor Training</b></a><br/> 
                 <br/>
                 <b>Schutzkonzept Fitness:</b><br/>  
-                <p>Weitere Infos<a href="docs/Schutzkonzept ab 29.10.2020 - Movimento Fitness.pdf" target="_blank"><b> hier</b></a></p>           
+                <p class="hidden">Weitere Infos<a href="docs/Schutzkonzept ab 29.10.2020 - Movimento Fitness.pdf" target="_blank"><b> hier</b></a></p>           
             </div>
         </div>
         <div class="col-sm-6 hidden">
