--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
             <div class="new well">
                 <h1>Aktuell</h1>
                 <b>Neue Verordnung des Kantons BL:</b><br/> 
-                <b>Fittness geschlossen ab 11.12.20 bis voraussichtlich 18.01.21</b><br/>
+                <b>Fitness geschlossen ab 11.12.20 bis voraussichtlich 18.01.21</b><br/>
                 <b>(Ausnahme: Training auf ärztliche Verordnung)</b><br/>
                 <b><font color="#ec580f">Maskenpflicht</font> im ganzen Movimento!</b><br/> 
                 <p class="hidden"><br/> Training nur nach Terminvereinbarung:<a href="docs/Reservationssystem Doodle.pdf" target="_blank"><b></b> Link zum Doodle</b></a><br/>
