--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                 <h1>Aktuell</h1>
                 <b></b><br/> 
                 <b>Fitness:Fr., 11.12.20. normal geöffnet!</b><br/>
-                <b>(Termin bitte über Doodle eintragen.<br/>
+                <b>Termin bitte über Doodle eintragen.<br/>
                     (Wir informieren am Fr., 11.12.20 wieder, ob wir weiterhin offen haben dürfen.)</b><br/>
                 <b><font color="#ec580f">Maskenpflicht</font> im ganzen Movimento!</b><br/> 
                 <p class="hidden"><br/> Training nur nach Terminvereinbarung:<a href="docs/Reservationssystem Doodle.pdf" target="_blank"><b></b> Link zum Doodle</b></a><br/>
