--- a/index.html
+++ b/index.html
@@ -275,9 +275,9 @@
                 <b>Termin bitte über Doodle eintragen.<br/>
                     (Wir informieren am Wochenende wieder, ob/wie wir weiterhin offen haben dürfen.)</b><br/>
                 <b><font color="#ec580f">Maskenpflicht</font> im ganzen Movimento!</b><br/> 
-                <p class="hidden"><br/> Training nur nach Terminvereinbarung:<a href="docs/Reservationssystem Doodle.pdf" target="_blank"><b></b> Link zum Doodle</b></a><br/>
+                </p><br/> Training nur nach Terminvereinbarung:<a href="docs/Reservationssystem Doodle.pdf" target="_blank"><b></b> Link zum Doodle</b></a><br/>
                 <br/>
-                <a href="docs/Flyer Nordic Walking.pdf" target="_blank"><b> Info Outdoor Training</b></a><br/> 
+                <p class="hidden"></p><a href="docs/Flyer Nordic Walking.pdf" target="_blank"><b> Info Outdoor Training</b></a><br/> 
                 <br/>
                 <b>Schutzkonzept Fitness:</b><br/>  
                 <p class="hidden">Weitere Infos<a href="docs/Schutzkonzept ab 29.10.2020 - Movimento Fitness.pdf" target="_blank"><b> hier</b></a></p>           
