--- a/index.html
+++ b/index.html
@@ -277,9 +277,9 @@
                 <b><font color="#ec580f">Maskenpflicht</font> im ganzen Movimento!</b><br/> 
                 </p><br/> Training nur nach Terminvereinbarung:<a href="docs/Reservationssystem Doodle.pdf" target="_blank"><b></b> Link zum Doodle</b></a><br/>
                 <br/>
-                <p class="hidden"></p><a href="docs/Flyer Nordic Walking.pdf" target="_blank"><p class="hidden"></p><b> Info Outdoor Training</b></a><br/> 
+                <p class="hidden"></p><a href="docs/Flyer Nordic Walking.pdf" target="_blank"><b> Info Outdoor Training</b></a><br/> 
                 <br/>
-                <p class="hidden"></p><b>Schutzkonzept Fitness:</b><br/>  
+                <p class="hidden"></p><b>Schutzkonzept Fitness:</b><br/></p> 
                 <p class="hidden">Weitere Infos<a href="docs/Schutzkonzept ab 29.10.2020 - Movimento Fitness.pdf" target="_blank"><b> hier</b></a></p>           
             </div>
         </div>
