--- a/index.html
+++ b/index.html
@@ -271,16 +271,17 @@
             <div class="new well">
                 <h1>Aktuell</h1>
                 <b></b><br/> 
-                <b>Fitness:Sa., 12.12.20. normal geöffnet!</b><br/>
-                <b>Termin bitte über Doodle eintragen.<br/>
-                    (Wir informieren am Wochenende wieder, ob/wie wir weiterhin offen haben dürfen.)</b><br/>
-                <b><font color="#ec580f">Maskenpflicht</font> im ganzen Movimento!</b><br/> 
+                <b>Fitness: ab Sa., 12.12.20 Mo-Fr jeweils geöffnet bis 19h!<br/>
+                    Sa normale Öffnungszeiten.
+                    </b><br/>
+                <b>Termin bitte über Doodle eintragen. </b><br/> 
                 </p><br/> Training nur nach Terminvereinbarung:<a href="docs/Reservationssystem Doodle.pdf" target="_blank"><b></b> Link zum Doodle</b></a><br/>
-                <br/>
+                <br/><b>(Physiotermine weiterhin bis 21h erlaubt.)</b>
+                <b><font color="#ec580f">Maskenpflicht</font> im ganzen Movimento!</b><br/>
                 <p class="hidden"><a href="docs/Flyer Nordic Walking.pdf" target="_blank"><b> Info Outdoor Training</b></a><br/> 
-                <br/>
-                <p class="hidden"><b>Schutzkonzept Fitness:</b><br/>
-                <p class="hidden">Weitere Infos<a href="docs/Schutzkonzept ab 29.10.2020 - Movimento Fitness.pdf" target="_blank"><b> hier</b></a></p>           
+                <br/></p> 
+                <b>Schutzkonzept Fitness:</b><br/>
+                <b>Weitere Infos<a href="docs/Schutzkonzept ab 29.10.2020 - Movimento Fitness.pdf" target="_blank"><b> hier</b></a></p>           
             </div>
         </div>
         <div class="col-sm-6 hidden">
