--- a/index.html
+++ b/index.html
@@ -271,10 +271,9 @@
             <div class="new well">
                 <h1>Aktuell</h1>
                 <b></b><br/> 
-                <b>Fitness: ab Sa., 12.12.20 Mo-Fr jeweils geöffnet bis 19h!<br/>
+                <b>Fitness: <br/>ab Sa., 12.12.20 Mo-Fr jeweils geöffnet bis 19h!<br/>
                     Sa normale Öffnungszeiten.
-                    </b><br/>
-                <b>Termin bitte über Doodle eintragen. </b><br/> 
+                    </b>
                 </p><br/> Training nur nach Terminvereinbarung:<a href="docs/Reservationssystem Doodle.pdf" target="_blank"><b></b> Link zum Doodle</b></a><br/>
                 <br/><b>(Physiotermine weiterhin bis 21h erlaubt.)</b>
                 <b><font color="#ec580f">Maskenpflicht</font> im ganzen Movimento!</b><br/>
