--- a/index.html
+++ b/index.html
@@ -271,10 +271,10 @@
             <div class="new well">
                 <h1>Aktuell</h1>
                 <b></b><br/> 
-                <b>Fitness: <br/>ab Sa., 12.12.20 Mo-Fr jeweils geöffnet bis 19h!<br/>
+                <b>Fitness: ab Sa., 12.12.20 <br/>Mo-Fr jeweils geöffnet bis 19h!<br/>
                     Sa normale Öffnungszeiten.
                     </b>
-                </p><br/> Training nur nach Terminvereinbarung:<a href="docs/Reservationssystem Doodle.pdf" target="_blank"><b></b> Link zum Doodle</b></a><br/>
+                </p>Training nur nach Terminvereinbarung:<a href="docs/Reservationssystem Doodle.pdf" target="_blank"><b></b> Link zum Doodle</b></a>
                 <br/><b>(Physiotermine weiterhin bis 21h erlaubt.)</b>
                 <b><font color="#ec580f">Maskenpflicht</font> im ganzen Movimento!</b><br/>
                 <p class="hidden"><a href="docs/Flyer Nordic Walking.pdf" target="_blank"><b> Info Outdoor Training</b></a><br/> 
