--- a/index.html
+++ b/index.html
@@ -271,9 +271,8 @@
             <div class="new well">
                 <h1>Aktuell</h1>
                 <b></b><br/> 
-                <b>Fitness: ab Sa., 12.12.20 <br/>Mo-Fr jeweils geöffnet bis 19h!<br/>
-                    Sa normale Öffnungszeiten.
-                    </b>
+                <b>Fitness ab Sa., 12.12.20: <br/>Mo-Fr jeweils geöffnet bis 19h!<br/>
+                    Sa normale Öffnungszeiten.</b>
                 </p>Training nur nach Terminvereinbarung:<a href="docs/Reservationssystem Doodle.pdf" target="_blank"><b></b> Link zum Doodle</b></a>
                 <br/><b>(Physiotermine weiterhin bis 21h erlaubt.)</b>
                 <b><font color="#ec580f">Maskenpflicht</font> im ganzen Movimento!</b><br/>
