--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                 <b></b><br/> 
                 <b>Fitness ab Sa., 12.12.20: <br/>Mo-Fr jeweils geöffnet bis 19h!<br/>
                     Sa normale Öffnungszeiten.</b><br/>
-                <b>Training nur nach Terminvereinbarung:<a href="docs/Reservationssystem Doodle.pdf" target="_blank"><b></b> Link zum Doodle</b></a>
+                <b>Training nur nach Terminvereinbarung:<a href="docs/Reservationssystem Doodle.pdf" target="_blank"><b></b><br/> Link zum Doodle</b></a>
                 <br/><b>(Physiotermine weiterhin bis 21h erlaubt.)</b>
                 <b><font color="#ec580f">Maskenpflicht</font> im ganzen Movimento!</b><br/>
                 <p class="hidden"><a href="docs/Flyer Nordic Walking.pdf" target="_blank"><b> Info Outdoor Training</b></a><br/> 
