--- a/index.html
+++ b/index.html
@@ -273,11 +273,11 @@
                 <b></b><br/> 
                  <b>Fitness vom 22.12.20 bis voraussichtlich 22.01.21 geschlossen</b><br/>
                 <p class="hidden"><b>Training nur nach Terminvereinbarung:<a href="docs/Reservationssystem Doodle.pdf" target="_blank"><b></b><br/> Link zum Doodle</b></a></p>
-                <br/><b>(Physiotermine weiterhin bis 21h erlaubt.)</b>
+                <b>(Physiotermine weiterhin bis 21h erlaubt.)</b>
                 <b><font color="#ec580f">Maskenpflicht</font> im ganzen Movimento!</b><br/>
                 <p class="hidden"><a href="docs/Flyer Nordic Walking.pdf" target="_blank"><b> Info Outdoor Training</b></a><br/> 
                 <br/></p> 
-                <b>Schutzkonzept Fitness:</b><br/>
+                 <p class="hidden"><b>Schutzkonzept Fitness:</b><br/>
                 <b>Weitere Infos<a href="docs/Schutzkonzept ab 29.10.2020 - Movimento Fitness.pdf" target="_blank"><b> hier</b></a></p>           
             </div>
         </div>
