--- a/barbara-longo.html
+++ b/barbara-longo.html
@@ -129,7 +129,7 @@
     </div>
     <div class="row">
         <div class="col-lg-2 col-xs-3">2007-2010</div>
-        <div class="col-xs-9">Tätigkeit in Privatpraxen mit Schwerpunkt Orthopädie, Traumatologie, Rheumatologie</div>
+        <div class="col-xs-9">Tätigkeit in Privatpraxen in Liestal mit Schwerpunkt Orthopädie, Traumatologie, Rheumatologie</div>
     </div>
     <div class="row">
         <div class="col-lg-2 col-xs-3">1998-2007</div>
