--- a/melina-duerr.html
+++ b/melina-duerr.html
@@ -135,7 +135,7 @@
     <div class="row">
         <div class="col-lg-2 col-xs-3">2009-2013</div>
         <div class="col-xs-9">
-            Tätigkeit in Privatpraxen mit Schwerpunkt Orthopädie, Traumatologie, Rheumatologie
+            Tätigkeit in Privatpraxen in Muttenz und Basel mit Schwerpunkt Orthopädie, Traumatologie, Rheumatologie
         </div>
     </div>
     <div class="row">
@@ -148,7 +148,7 @@
     <div class="row">
         <div class="col-lg-2 col-xs-3">2003</div>
         <div class="col-xs-9">
-            Temporäre Tätigkeit Kantonsspital Laufen und in Privatpraxis
+            Temporäre Tätigkeit Kantonsspital Laufen und in Privatpraxis in Arosa
         </div>
     </div>
     <div class="row section">
@@ -162,6 +162,7 @@
             <li>ESP-Themenkurs Training bei kardio-pulmonalen Erkrankungen</li>
             <li>TRX Sports Medicine Suspension Trainer L2</li>
             <li>ESP-Themenkurs Training bei Diabetes, Übergewicht, Stoffwechselerkrankungen</li>
+            <li>Anatomie am Präparat</li>
             <li>Kinesiotaping</li>
             <li>Myofasziale Triggerpunkt-Therapie IMTT Modul 1</li>
             <li>Zusatzausbildung ESP Sportphysiotherapie</li>
