--- a/viktor-bossert.html
+++ b/viktor-bossert.html
@@ -166,8 +166,8 @@
             <li>Kinesiotaping</li>
             <li>Modul Classical Osteopathy</li>
             <li>Zusatzausbildung in Manueller Therapie nach Vollmer Module 1-4</li>
-            <li>Diplom Physiotherapie 2012</li>
-            <li>Diplom Medizin. Masseur und Medizin. Bademeister 2008</li>
+            <li>Diplom Physiotherapie Bad Sulza 2012</li>
+            <li>Diplom Medizin. Masseur und Medizin. Bademeister Freiburg im Breisgau 2008</li>
             
         </ul>
     </div>
