Keine regulären Öffnungszeiten

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                 <b></b><br/> 
                  <b>Fitness vom 22.12.20 bis voraussichtlich 22.01.21 geschlossen.</b><br/>
                 <p class="hidden"><b>Training nur nach Terminvereinbarung:<a href="docs/Reservationssystem Doodle.pdf" target="_blank"><b></b><br/> Link zum Doodle</b></a></p>
-                <b>(Physiotermine weiterhin bis 21h erlaubt.)</b>
+                <b>(Physiotermine weiterhin bis 21h erlaubt.)</b><br/>
                 <b><font color="#ec580f">Maskenpflicht</font> im ganzen Movimento!</b><br/>
                 <p class="hidden"><a href="docs/Flyer Nordic Walking.pdf" target="_blank"><b> Info Outdoor Training</b></a><br/> 
                 <br/></p> 
@@ -352,7 +352,7 @@
          
 
             <a name="NeueOeffnungszeiten"></a>
-            <h2 class="preliminary">Öffnungszeiten</h2>
+            <h2 class="preliminary">Momentan keine regulären Öffnungszeiten!</h2>
             <p class="hidden">Bitte beachten Sie die speziellen <a href="docs/2019.pdf" class="preliminary" target="_blank">Öffnungszeiten an Auffahrt und Pfingsten.</a></p>
             <table>
                 <tr>
