--- a/viktor-bossert.html
+++ b/viktor-bossert.html
@@ -126,7 +126,7 @@
     </div>
     <div class="row">
         <div class="col-lg-2 col-xs-3">Seit 2020</div>
-        <div class="col-xs-9">Physiotherapeut bei Schweizer Handball-Nationalmannschaft Männer</div>
+        <div class="col-xs-9">Physiotherapeut der Schweizer Handball-Nationalmannschaften</div>
     </div>
     <div class="row">
         <div class="col-lg-2 col-xs-3">2017-2020</div>
