--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
             <div class="new well">
                 <h1>Aktuell</h1>
                 <b></b><br/> 
-                 <b>Fitness vom 22.12.20 bis voraussichtlich Ende <br/> 22.3.21 geschlossen.</b><br/>
+                 <b>Fitness vom 22.12.20 bis voraussichtlich <br/> 22.3.21 geschlossen.</b><br/>
                 <p class="hidden"><b>Training nur nach Terminvereinbarung:<a href="docs/Reservationssystem Doodle.pdf" target="_blank"><b></b><br/> Link zum Doodle</b></a></p>
                 <b>(Physiotermine weiterhin bis 21h erlaubt.)</b><br/>
                 <b><font color="#ec580f">Maskenpflicht</font> im ganzen Movimento!</b><br/>
