--- a/index.html
+++ b/index.html
@@ -271,10 +271,10 @@
             <div class="new well">
                 <h1>Aktuell</h1>
                 <b></b><br/> 
-                 <b>Fitness vom 22.12.20 bis voraussichtlich <br/> 22.3.21 geschlossen.</b><br/>
+                 <b>Fitness geschlossen bis voraussichtlich <br/> Mitte Apri1 .</b><br/>
                 <p class="hidden"><b>Training nur nach Terminvereinbarung:<a href="docs/Reservationssystem Doodle.pdf" target="_blank"><b></b><br/> Link zum Doodle</b></a></p>
-                <b>(Physiotermine weiterhin bis 21h erlaubt.)</b><br/>
-                <b><font color="#ec580f">Maskenpflicht</font> im ganzen Movimento!</b><br/>
+                <b>Weiterhin geöffnet:<br/>Physioterapie & MTT</b><br/>
+                <p class="hidden"><b><font color="#ec580f">Maskenpflicht</font> im ganzen Movimento!</b><br/></p>
                 <p class="hidden"><a href="docs/Flyer Nordic Walking.pdf" target="_blank"><b> Info Outdoor Training</b></a><br/> 
                 <br/></p> 
                  <p class="hidden"><b>Schutzkonzept Fitness:</b><br/>
