--- a/index.html
+++ b/index.html
@@ -270,10 +270,10 @@
         <div class="col-sm-6">
             <div class="new well">
                 <h1>Aktuell</h1>
-                <b></b><br/> 
-                 <b>Fitness geschlossen bis <br/> voraussichtlich Mitte April 2021 .</b><br/>
+                <b></b> 
+                 <b>Fitness geschlossen bis <br/> voraussichtlich Mitte April 2021</b><br/>
                 <p class="hidden"><b>Training nur nach Terminvereinbarung:<a href="docs/Reservationssystem Doodle.pdf" target="_blank"><b></b><br/> Link zum Doodle</b></a></p>
-                <br/> <b>Weiterhin geöffnet:<br/>Physioherapie & MTT</b><br/>
+                <br/> <b>Weiterhin geöffnet:<br/>Physiotherapie & MTT</b><br/>
                 <p class="hidden"><b><font color="#ec580f">Maskenpflicht</font> im ganzen Movimento!</b><br/></p>
                 <p class="hidden"><a href="docs/Flyer Nordic Walking.pdf" target="_blank"><b> Info Outdoor Training</b></a><br/> 
                 <br/></p> 
