--- a/index.html
+++ b/index.html
@@ -271,8 +271,8 @@
             <div class="new well">
                 <h1>Aktuell</h1>
                 <b></b> 
-                 <b>Fitness ab Mo., 19.4.21 wieder offen! <br/> Link für Doodle zum Eintragen folgt in Kürze.</b><br/>
-                <p class="hidden"><b>Training nur nach Terminvereinbarung:<a href="docs/Reservationssystem Doodle.pdf" target="_blank"><b></b><br/> Link zum Doodle</b></a></p>
+                 <b>Fitness ab Mo., 19.4.21 wieder offen! <br/> 
+                <b>Training nur nach Terminvereinbarung:<a href="https://doodle.com/poll/ri58wrk3n97s62mb?utm_source=poll&utm_medium=link" target="_blank"><b></b><br/> Link zum Doodle</b>
                 
                 <p class="hidden"><b><font color="#ec580f">Maskenpflicht</font> im ganzen Movimento!</b><br/></p>
                 <p class="hidden"><a href="docs/Flyer Nordic Walking.pdf" target="_blank"><b> Info Outdoor Training</b></a><br/> 
