--- a/index.html
+++ b/index.html
@@ -360,7 +360,9 @@
                     <th>&nbsp;</th>                   
                     <th>Betreut</th>                                        
                 </tr>
+                <DIV align="center">
                 <tr>
+                    
                     <td nowrap='true'>Mo:</td>
                     <td>07:30 – 21:00</td>
                     <td>&nbsp;</td>
@@ -408,6 +410,7 @@
                     <td>&nbsp;</td>
                     <td>08:30 - 13:00</td>
                 </tr>
+            </DIV>
             </table>                        
         </div>
     </div>
