--- a/index.html
+++ b/index.html
@@ -360,9 +360,8 @@
                     <th>&nbsp;</th>                   
                     <th>Betreut</th>                                        
                 </tr>
-                <DIV align="center">
                 <tr>
-                    
+                    <div style="text-align: center">   
                     <td nowrap='true'>Mo:</td>
                     <td>07:30 – 21:00</td>
                     <td>&nbsp;</td>
@@ -409,8 +408,8 @@
                     <td>08:30 – 13:00</td>
                     <td>&nbsp;</td>
                     <td>08:30 - 13:00</td>
+                </div>
                 </tr>
-            </DIV>
             </table>                        
         </div>
     </div>
