--- a/index.html
+++ b/index.html
@@ -354,6 +354,7 @@
             <a name="NeueOeffnungszeiten"></a>
             <p class="hidden">Bitte beachten Sie die speziellen <a href="docs/2019.pdf" class="preliminary" target="_blank">Öffnungszeiten an Auffahrt und Pfingsten.</a></p>
             <table>
+                <p align="center">
                 <tr>
                     <th/>
                     <th colspan="">Offen</th> 
@@ -361,7 +362,7 @@
                     <th>Betreut</th>                                        
                 </tr>
                 <tr>
-                    <div style="text-align: center">   
+                    <div style="text-align: -">   
                     <td nowrap='true'>Mo:</td>
                     <td>07:30 – 21:00</td>
                     <td>&nbsp;</td>
@@ -408,7 +409,7 @@
                     <td>08:30 – 13:00</td>
                     <td>&nbsp;</td>
                     <td>08:30 - 13:00</td>
-                </div>
+                </p>
                 </tr>
             </table>                        
         </div>
