--- a/index.html
+++ b/index.html
@@ -362,7 +362,8 @@
                     <th>Betreut</th>                                        
                 </tr>
                 <tr>
-                    <div style="text-align: -">   
+                    <p style="font-family:Arial">
+                     
                     <td nowrap='true'>Mo:</td>
                     <td>07:30 – 21:00</td>
                     <td>&nbsp;</td>
