--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
             <a name="NeueOeffnungszeiten"></a>
             <p class="hidden">Bitte beachten Sie die speziellen <a href="docs/2019.pdf" class="preliminary" target="_blank">Öffnungszeiten an Auffahrt und Pfingsten.</a></p>
             <table>
-                <p align="center">
+        
                 <tr>
                     <th/>
                     <th colspan="">Offen</th> 
@@ -362,7 +362,7 @@
                     <th>Betreut</th>                                        
                 </tr>
                 <tr>
-                    <p style="font-family:Arial">
+                    <font face="Arial">
                      
                     <td nowrap='true'>Mo:</td>
                     <td>07:30 – 21:00</td>
@@ -410,7 +410,7 @@
                     <td>08:30 – 13:00</td>
                     <td>&nbsp;</td>
                     <td>08:30 - 13:00</td>
-                </p>
+                </font></p>
                 </tr>
             </table>                        
         </div>
