--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                 <p class="hidden"><b><font color="#ec580f">Maskenpflicht</font> im ganzen Movimento!</b><br/></p>
                 <p class="hidden"><a href="docs/Flyer Nordic Walking.pdf" target="_blank"><b> Info Outdoor Training</b></a><br/> 
                 <br/></p> 
-                </p><a href="docs/Schutzkonzept ab 19.04.2021 - Movimento Fitness.pdf" target="_blank"><b>Schutzkonzept Fitness:</b></a><br/>
+                </p><a href="docs/Schutzkonzept ab 19.04.2021 - Movimento Fitness.pdf" target="_blank"><b>Schutzkonzept Fitness</b></a><br/>
                            
             </div>
         </div>
