--- a/index.html
+++ b/index.html
@@ -274,11 +274,11 @@
                 <b>Do., 13.5.21 (Auffahrt)<br/> 
                     Mo., 24.5.21 (Pfingsten)<br/> 
                     geschlossen <br/></b> 
-                    <br/> 
+                    <b></b><br/> 
                 <b>Training nur nach Terminvereinbarung:<a href="https://doodle.com/poll/ri58wrk3n97s62mb?utm_source=poll&utm_medium=link" target="_blank"><b></b><br/> Link zum Doodle</b> <br/>
                 <p class="hidden"><b><font color="#ec580f">Maskenpflicht</font> im ganzen Movimento!</b><br/></p>
                 <p class="hidden"><a href="docs/Flyer Nordic Walking.pdf" target="_blank"><b> Info Outdoor Training</b></a><br/> 
-                <a href="docs/Schutzkonzept ab 19.04.2021 - Movimento Fitness.pdf" target="_blank"><b></b><br/>Schutzkonzept Fitness</b>
+                <b><a href="docs/Schutzkonzept ab 19.04.2021 - Movimento Fitness.pdf" target="_blank"><b></b><br/> Schutzkonzept Fitness</b>
                            
             </div>
         </div>
