--- a/index.html
+++ b/index.html
@@ -330,11 +330,11 @@
                 <h1>Fitness</h1>
                 <p>Kraft- und Ausdauertraining, professionell begleitet.<br/>
                 <br/><b>Für die Movimento-freie Zeit:</b><br/></p>              
-                <a href="docs/1 - Die regelmässige körperliche Aktivität.pdf" target="_blank"><b>Die regelmässige Aktivität</b><br/>
-                <a href="docs/2 - Das Aufwärmen.pdf" target="_blank"><b>Aufwärmen</b><br/>
-                <a href="docs/3 - Das Ausdauertraining.pdf" target="_blank"><b>Ausdauer</b><br/>
-                <a href="docs/4 - Das Krafttraining.pdf" target="_blank"><b>Kraft</b><br/>
-                <a href="docs/5 - Das Dehnen.pdf" target="_blank"><b>Dehnen</b><br/>
+                <a href="docs/1 - Die regelmässige körperliche Aktivität.pdf" target="_blank"><b></b>Die regelmässige Aktivität</b><br/>
+                <a href="docs/2 - Das Aufwärmen.pdf" target="_blank"><b></b>Aufwärmen</b><br/>
+                <a href="docs/3 - Das Ausdauertraining.pdf" target="_blank"><b></b>Ausdauer</b><br/>
+                <a href="docs/4 - Das Krafttraining.pdf" target="_blank"><b></b>Kraft</b><br/>
+                <a href="docs/5 - Das Dehnen.pdf" target="_blank"><b></b>Dehnen</b><br/>
                 <a href="fitness.html" role="button">
                     Mehr&hellip;
                 </a>
